# serializer version: 1
# name: test_nested_while_llvm_ir
  '''
  
  define void @main() {
  entry:
    br label %while_header0
  while_header0:
    %wh0_i = phi i64 [ 0, %entry ], [ %_11, %exit1 ]
    br label %while_body0_exit
  while_body0:
    %wb0_oi = phi i64 [ %wh0_i, %while_body0_exit ]
    %_0 = alloca double, i64 1
    %_1 = add i64 %wb0_oi, 1
    br label %while_header1
  while_header1:
    %wh1_j = phi i64 [ 0, %while_body0 ], [ %_5, %while_body1 ]
    br label %while_body1_exit
  while_body1:
    %wb1_j2 = phi i64 [ %wh1_j, %while_body1_exit ]
    %_3 = alloca double, i64 1
    store i64 0, ptr %_3
    %_5 = load i64, ptr %_3
    br label %while_header1
  while_body1_exit:
    %_7 = icmp slt i64 %wh1_j, 2
    br i1 %_7, label %while_body1, label %exit1
  exit1:
    store i64 %_1, ptr %_0
    %_11 = load i64, ptr %_0
    br label %while_header0
  while_body0_exit:
    %_13 = icmp slt i64 %wh0_i, 2
    br i1 %_13, label %while_body0, label %exit0
  exit0:
    ret void
  }
  '''
# ---
# name: test_while_llvm_ir
  '''
  
  define void @main() {
  entry:
    br label %while_header0
  while_header0:
    %wh0_i = phi i64 [ 0, %entry ], [ %_3, %while_body0 ]
    br label %while_body0_exit
  while_body0:
    %wb0_i = phi i64 [ %wh0_i, %while_body0_exit ]
    %_0 = alloca double, i64 1
    %_1 = add i64 %wb0_i, 1
    store i64 %_1, ptr %_0
    %_3 = load i64, ptr %_0
    br label %while_header0
  while_body0_exit:
    %_5 = icmp slt i64 %wh0_i, 10
    br i1 %_5, label %while_body0, label %exit0
  exit0:
    ret void
  }
  '''
# ---
